# kagent-cookbook

./: .gitignore  README.md
demo-01-byo-full-control/: README.md  deploy-kind.sh
demo-01-byo-full-control/agent/: Dockerfile  agent.py  pyproject.toml
demo-01-byo-full-control/agent/agent/: agent-card.json  agent.py
demo-01-byo-full-control/k8s/: agent.yaml
demo-02-tool-reuse/: README.md  deploy-kind.sh
demo-02-tool-reuse/agent/: agent.py  pyproject.toml
demo-02-tool-reuse/agent/agent/: agent-card.json  agent.py
demo-02-tool-reuse/k8s/: byo-agent.yaml  mcp-server.yaml
demo-02-tool-reuse/tools/: Dockerfile  pyproject.toml  server.py
demo-03-local-llm/: README.md  deploy-kind.sh
demo-03-local-llm/k8s/: agent.yaml  modelconfig.yaml  ollama.yaml
demo-04-hitl/: README.md  deploy-kind.sh
demo-04-hitl/k8s/: hitl-agent.yaml
scripts/: kind-setup.sh
