[project]
name = "custom-adk-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kagent-adk>=0.3.0",
    "google-adk>=1.28.1,<2",
    "a2a-sdk>=0.3.23,<1.0.0",
]

[tool.setuptools]
packages = ["agent"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
